--- a/.github/workflows/ios_automate.yml
+++ b/.github/workflows/ios_automate.yml
@@ -6,14 +6,14 @@ on:
       - main
 
 jobs:
-  build-and-test
-    runs-on:MacOS-latest
+  build-and-test:
+    runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
     
       - name: Set up Xcode
-        uses: actions/setup-xcode@v1
+        uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: '15.0'
       
@@ -21,16 +21,15 @@ jobs:
         run: |
           xcodebuild \
             -project ModernWeatherUI.xcodeproj \
-            -scheme "ModernWeatherUI" \        
+            -scheme "ModernWeatherUI" \
             -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
             clean build
 
       - name: Run Unit Tests
         run: |
           xcodebuild \
-            -project ModernWeatherUITests.xcodeproj \
+            -project ModernWeatherUI.xcodeproj \ 
             -scheme "ModernWeatherUI" \
             -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
             test
-
 
