--- a/.github/workflows/ios_automate.yml
+++ b/.github/workflows/ios_automate.yml
@@ -7,10 +7,12 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: macos-latest
+    runs-on: macos-14
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
     
       - name: Set up Xcode
         uses: maxim-lobanov/setup-xcode@v1
