--- a/.github/workflows/ios_automate.yml
+++ b/.github/workflows/ios_automate.yml
@@ -7,24 +7,24 @@ on:
 
 jobs:
   build-and-test:
-    runs-on: macos-14
+    runs-on: macos-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
     
-      - name: Set up Xcode
-        uses: maxim-lobanov/setup-xcode@v1
-        with:
-          xcode-version: '15.0'
+      - name: Select Xcode 16.4
+        run: |
+          sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
+          xcodebuild -version
       
       - name: Build the project
         run: |
           xcodebuild \
             -project ModernWeatherUI.xcodeproj \
             -scheme "ModernWeatherUI" \
-            -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
+            -destination 'platform=iOS Simulator,name=iPhone 16 Pro' \
             clean build
 
       - name: Run Unit Tests
@@ -32,6 +32,6 @@ jobs:
           xcodebuild \
             -project ModernWeatherUI.xcodeproj \ 
             -scheme "ModernWeatherUI" \
-            -destination 'platform=iOS Simulator,name=iPhone 15 Pro' \
+            -destination 'platform=iOS Simulator,name=iPhone 16 Pro' \
             test
 
