--- a/.github/workflows/ios_automate.yml
+++ b/.github/workflows/ios_automate.yml
@@ -14,10 +14,11 @@ jobs:
         with:
           fetch-depth: 0
     
-      - name: Select Xcode 16.4
-        run: |
-          sudo xcode-select -s /Applications/Xcode_16.4.app/Contents/Developer
-          xcodebuild -version
+      - name: Set up Xcode 16.2
+        uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '16.2'
+  
       
       - name: Build the project
         run: |
